Add disqus to all posts

--- a/_posts/2014-10-28-rubyconfar-2014.md
+++ b/_posts/2014-10-28-rubyconfar-2014.md
@@ -7,6 +7,7 @@ image:
   feature: rubyconf-2014.jpeg
   credit: RubyConfAR
   creditlink: http://twitter.com/RubyConfAR
+comments: true
 share: true
 ---
 
