Fix work tags, change avatar, add google analytics tracking code

--- a/_posts/2014-12-17-artemia.md
+++ b/_posts/2014-12-17-artemia.md
@@ -2,7 +2,7 @@
 title:  "Artemia"
 subtitle: "artemia.com.uy"
 date:   2014-12-17 20:33:31
-tags: design development
+tag: 'web-design backend e-commerce'
 work_url: "http://www.artemia.com.uy"
 project_thumb: "/images/projects/artemia/project-thumb.jpg"
 project_slides: "/images/projects/artemia/project-slide.jpg,/images/projects/artemia/project-slide2.jpg"
