--- a/_posts/2015-04-02-olmos.md
+++ b/_posts/2015-04-02-olmos.md
@@ -2,7 +2,7 @@
 title:  "Olmos"
 subtitle: "olmos.com.uy"
 date:   2015-04-02 20:33:31
-tags: design development
+tag: backend
 work_url: "http://www.olmos.com.uy"
 project_thumb: "/images/projects/olmos/project-thumb.jpg"
 project_slides: "/images/projects/olmos/project-slide.jpg,/images/projects/olmos/project-slide2.jpg,/images/projects/olmos/project-slide3.jpg,/images/projects/olmos/project-slide4.jpg"
